Animation progressive sur les boutons des menus

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -54,7 +54,7 @@
                 <div class="entrees">
                     <h3 class="m-title">Entrées</h3>
                     <div class="card-rest">
-                        <button class="shad btn-menu">
+                        <button class="shad btn-menu btn-one">
                             <span class="tit-c">
                                 <span>Tartare de pouple acidulé</span>
                             </span>
@@ -70,7 +70,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu">
+                        <button class="shad btn-menu btn-two">
                             <span class="tit-c">
                                 <span>Velouté de légumes d'antan</span>
                             </span>
@@ -86,7 +86,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu">
+                        <button class="shad btn-menu btn-three">
                             <span class="tit-c">
                                 <span>Soupe à l'oignon</span>
                             </span>
@@ -107,7 +107,7 @@
                 <div class="plats">
                     <h4 class="m-title">Plats</h4>
                     <div class="card-rest">
-                        <button class="shad btn-menu">
+                        <button class="shad btn-menu btn-four">
                             <span class="tit-c">
                                 <span>Coquilles Saint-Jacques</span>
                             </span>
@@ -123,7 +123,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu">
+                        <button class="shad btn-menu btn-five">
                             <span class="tit-c">
                                 <span>Magret de canard</span>
                             </span>
@@ -139,7 +139,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu">
+                        <button class="shad btn-menu btn-six">
                             <span class="tit-c">
                                 <span>Pigeonneau d'Ille-et-Vilaine</span>
                             </span>
@@ -160,7 +160,7 @@
                 <div class="desserts">
                     <h5 class="m-title">Désserts</h5>
                     <div class="card-rest">
-                        <button class="shad btn-menu">
+                        <button class="shad btn-menu btn-seven">
                             <span class="tit-c">
                                 <span>Pétales de violettes glacés</span>
                             </span>
@@ -176,7 +176,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu">
+                        <button class="shad btn-menu btn-eight">
                             <span class="tit-c">
                                 <span>Fondant au chocolat</span>
                             </span>
@@ -192,7 +192,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu">
+                        <button class="shad btn-menu btn-nine">
                             <span class="tit-c">
                                 <span>Millefeuille croustillant</span>
                             </span>
