--- a/palette-du-gout.html
+++ b/palette-du-gout.html
@@ -55,7 +55,7 @@
                 <div class="entrees">
                     <h3 class="m-title">Entrées</h3>
                     <div class="card-rest">
-                        <button class="shad btn-menu">
+                        <button class="shad btn-menu btn-onz">
                             <span class="tit-c">
                                 <span>Fricassée d'escargots</span>
                             </span>
@@ -71,7 +71,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu">
+                        <button class="shad btn-menu btn-two">
                             <span class="tit-c">
                                 <span>Foie gras de canard mi-cuit</span>
                             </span>
@@ -87,7 +87,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu">
+                        <button class="shad btn-menu btn-three">
                             <span class="tit-c">
                                 <span>Oeuf au plat</span>
                             </span>
@@ -108,7 +108,7 @@
                 <div class="plats">
                     <h4 class="m-title">Plats</h4>
                     <div class="card-rest">
-                        <button class="shad btn-menu">
+                        <button class="shad btn-menu btn-four">
                             <span class="tit-c">
                                 <span>Filet de boeuf aux herbes</span>
                             </span>
@@ -124,7 +124,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu">
+                        <button class="shad btn-menu btn-five">
                             <span class="tit-c">
                                 <span>Parmentier de queue de boeuf</span>
                             </span>
@@ -140,7 +140,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu">
+                        <button class="shad btn-menu btn-six">
                             <span class="tit-c">
                                 <span>Filet de trubot</span>
                             </span>
@@ -161,7 +161,7 @@
                 <div class="desserts">
                     <h5 class="m-title">Désserts</h5>
                     <div class="card-rest">
-                        <button class="shad btn-menu">
+                        <button class="shad btn-menu btn-seven">
                             <span class="tit-c">
                                 <span>Paris-Brest</span>
                             </span>
@@ -177,7 +177,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu">
+                        <button class="shad btn-menu btn-eight">
                             <span class="tit-c">
                                 <span>Macaron au chocolat d'exception</span>
                             </span>
@@ -193,7 +193,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu">
+                        <button class="shad btn-menu btn-nine">
                             <span class="tit-c">
                                 <span>Mousse au chocolat</span>
                             </span>
