Modification de la classe btn-one + ajout de l'animation progressive

--- a/delice-des-sens.html
+++ b/delice-des-sens.html
@@ -55,7 +55,7 @@
                 <div class="entrees">
                     <h3 class="m-title">Entrées</h3>
                     <div class="card-rest">
-                        <button class="shad btn-menu btn-one">
+                        <button class="shad btn-menu btn-1">
                             <span class="tit-c">
                                 <span>Tartare de thon</span>
                             </span>
@@ -71,7 +71,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu btn-two">
+                        <button class="shad btn-menu btn-2">
                             <span class="tit-c">
                                 <span>Bouchée de homard croustillant</span>
                             </span>
@@ -87,7 +87,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu btn-three">
+                        <button class="shad btn-menu btn-3">
                             <span class="tit-c">
                                 <span>Velouté de cèpes</span>
                             </span>
@@ -108,7 +108,7 @@
                 <div class="plats">
                     <h4 class="m-title">Plats</h4>
                     <div class="card-rest">
-                        <button class="shad btn-menu btn-four">
+                        <button class="shad btn-menu btn-4">
                             <span class="tit-c">
                                 <span>Poulet de rôti aux herbes de Provence</span>
                             </span>
@@ -124,7 +124,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu btn-five">
+                        <button class="shad btn-menu btn-5">
                             <span class="tit-c">
                                 <span>Langoustine rôtie</span>
                             </span>
@@ -140,7 +140,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu btn-six">
+                        <button class="shad btn-menu btn-6">
                             <span class="tit-c">
                                 <span>Côte de boeuf Angus</span>
                             </span>
@@ -161,7 +161,7 @@
                 <div class="desserts">
                     <h5 class="m-title">Désserts</h5>
                     <div class="card-rest">
-                        <button class="shad btn-menu btn-seven">
+                        <button class="shad btn-menu btn-7">
                             <span class="tit-c">
                                 <span>Farandole de desserts</span>
                             </span>
@@ -177,7 +177,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu btn-eight">
+                        <button class="shad btn-menu btn-8">
                             <span class="tit-c">
                                 <span>Crème brûlée</span>
                             </span>
@@ -193,7 +193,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu btn-nine">
+                        <button class="shad btn-menu btn-">
                             <span class="tit-c">
                                 <span>Tiramisu</span>
                             </span>
