--- a/note-enchantee.html
+++ b/note-enchantee.html
@@ -53,7 +53,7 @@
                 <div class="entrees">
                     <h3 class="m-title">Entrées</h3>
                     <div class="card-rest">
-                        <button class="shad btn-menu btn-one">
+                        <button class="shad btn-menu btn-1">
                             <span class="tit-c">
                                 <span>Ravioles de foie gras</span>
                             </span>
@@ -69,7 +69,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu btn-two">
+                        <button class="shad btn-menu btn-2">
                             <span class="tit-c">
                                 <span>Caviar osciètre</span>
                             </span>
@@ -85,7 +85,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu btn-three">
+                        <button class="shad btn-menu btn-3">
                             <span class="tit-c">
                                 <span>Homar et espuma de...</span>
                             </span>
@@ -101,7 +101,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu btn-four">
+                        <button class="shad btn-menu btn-4">
                             <span class="tit-c">
                                 <span>Foie gras de canard cuit entier</span>
                             </span>
@@ -122,7 +122,7 @@
                 <div class="plats">
                     <h4 class="m-title">Plats</h4>
                     <div class="card-rest">
-                        <button class="shad btn-menu btn-five">
+                        <button class="shad btn-menu btn-5">
                             <span class="tit-c">
                                 <span>Noix de coquilles Saint-Jacques</span>
                             </span>
@@ -138,7 +138,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu btn-six">
+                        <button class="shad btn-menu btn-6">
                             <span class="tit-c">
                                 <span>Langoustine poêlée</span>
                             </span>
@@ -154,7 +154,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu btn-seven">
+                        <button class="shad btn-menu btn-7">
                             <span class="tit-c">
                                 <span>Mijoté de queue de boeuf</span>
                             </span>
@@ -175,7 +175,7 @@
                 <div class="desserts">
                     <h5 class="m-title">Désserts</h5>
                     <div class="card-rest">
-                        <button class="shad btn-menu btn-eight">
+                        <button class="shad btn-menu btn-8">
                             <span class="tit-c">
                                 <span>Macaron noisette et chocolat</span>
                             </span>
@@ -191,7 +191,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu btn-nine">
+                        <button class="shad btn-menu btn-9">
                             <span class="tit-c">
                                 <span>Baba au rhum revisité</span>
                             </span>
@@ -207,7 +207,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu btn-ten">
+                        <button class="shad btn-menu btn-10">
                             <span class="tit-c">
                                 <span>Tarte au citron meringuée</span>
                             </span>
