--- a/palette-du-gout.html
+++ b/palette-du-gout.html
@@ -55,7 +55,7 @@
                 <div class="entrees">
                     <h3 class="m-title">Entrées</h3>
                     <div class="card-rest">
-                        <button class="shad btn-menu btn-onz">
+                        <button class="shad btn-menu btn-1">
                             <span class="tit-c">
                                 <span>Fricassée d'escargots</span>
                             </span>
@@ -71,7 +71,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu btn-two">
+                        <button class="shad btn-menu btn-2">
                             <span class="tit-c">
                                 <span>Foie gras de canard mi-cuit</span>
                             </span>
@@ -87,7 +87,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu btn-three">
+                        <button class="shad btn-menu btn-3">
                             <span class="tit-c">
                                 <span>Oeuf au plat</span>
                             </span>
@@ -108,7 +108,7 @@
                 <div class="plats">
                     <h4 class="m-title">Plats</h4>
                     <div class="card-rest">
-                        <button class="shad btn-menu btn-four">
+                        <button class="shad btn-menu btn-4">
                             <span class="tit-c">
                                 <span>Filet de boeuf aux herbes</span>
                             </span>
@@ -124,7 +124,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu btn-five">
+                        <button class="shad btn-menu btn-5">
                             <span class="tit-c">
                                 <span>Parmentier de queue de boeuf</span>
                             </span>
@@ -140,7 +140,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu btn-six">
+                        <button class="shad btn-menu btn-6">
                             <span class="tit-c">
                                 <span>Filet de trubot</span>
                             </span>
@@ -161,7 +161,7 @@
                 <div class="desserts">
                     <h5 class="m-title">Désserts</h5>
                     <div class="card-rest">
-                        <button class="shad btn-menu btn-seven">
+                        <button class="shad btn-menu btn-7">
                             <span class="tit-c">
                                 <span>Paris-Brest</span>
                             </span>
@@ -177,7 +177,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu btn-eight">
+                        <button class="shad btn-menu btn-8">
                             <span class="tit-c">
                                 <span>Macaron au chocolat d'exception</span>
                             </span>
@@ -193,7 +193,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu btn-nine">
+                        <button class="shad btn-menu btn-9">
                             <span class="tit-c">
                                 <span>Mousse au chocolat</span>
                             </span>
@@ -217,7 +217,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="btn-princ" id="btn">
                     <h6 class="command-h6">c</h6>
-                    <button>
+                    <button class="shad-command">
                         Commander
                     </button>
                 </div>
