--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -216,7 +216,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="btn-princ" id="btn">
                     <h6 class="command-h6">c</h6>
-                    <button>
+                    <button class="shad-command">
                         Commander
                     </button>
                 </div>
