--- a/delice-des-sens.html
+++ b/delice-des-sens.html
@@ -193,7 +193,7 @@
                                 </span>
                             </span>
                         </button>
-                        <button class="shad btn-menu btn-">
+                        <button class="shad btn-menu btn-9">
                             <span class="tit-c">
                                 <span>Tiramisu</span>
                             </span>
@@ -217,7 +217,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="btn-princ" id="btn">
                     <h6 class="command-h6">c</h6>
-                    <button>
+                    <button class="shad-command">
                         Commander
                     </button>
                 </div>
