--- a/note-enchantee.html
+++ b/note-enchantee.html
@@ -231,7 +231,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="btn-princ" id="btn">
                     <h6 class="command-h6">c</h6>
-                    <button>
+                    <button class="shad-command">
                         Commander
                     </button>
                 </div>
